Adding CURD operations
